--- a/web/index.html
+++ b/web/index.html
@@ -36,16 +36,7 @@
           'unsafe-inline' 
           'unsafe-eval' 
           blob: 
-          data:;
-        style-src 'self' 
-          https://fonts.googleapis.com 
-          'unsafe-inline';
-        frame-src 'self' 
-          https://accounts.google.com;
-        img-src 'self' 
-          https://lh3.googleusercontent.com;
-        font-src 'self' 
-          https://fonts.gstatic.com;">
+          data:;">
 
 
 
