--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,14 @@
   <meta name="apple-mobile-web-app-title" content="frontend">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <meta name="google-signin-client_id" content="994240469555-8iu9le1ibvsbvi765qoqfbj3ks00s62b.apps.googleusercontent.com">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://www.gstatic.com https://accounts.google.com;">
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com;
+  connect-src 'self' https://www.gstatic.com;
+  img-src 'self' data: https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline';
+  font-src 'self';
+">
 
 
 
