--- a/web/index.html
+++ b/web/index.html
@@ -27,12 +27,16 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <meta name="google-signin-client_id" content="994240469555-8iu9le1ibvsbvi765qoqfbj3ks00s62b.apps.googleusercontent.com">
 <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com;
-  connect-src 'self' https://www.gstatic.com;
-  img-src 'self' data: https://www.gstatic.com;
-  style-src 'self' 'unsafe-inline';
-  font-src 'self';
+default-src 'self’;
+script-src 'self' 'unsafe-inline' 'unsafe-eval' https://.gstatic.com https://apis.google.com https://accounts.google.com;
+script-src-elem 'self' 'unsafe-inline' https://.gstatic.com https://apis.google.com https://accounts.google.com;
+connect-src 'self' https://.gstatic.com https://accounts.google.com https://fonts.gstatic.com;
+img-src 'self' data: https://.gstatic.com https://*.googleapis.com;
+style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com;
+font-src 'self' data: https://fonts.gstatic.com;
+frame-src 'self' https://accounts.google.com;
+worker-src 'self' blob:;
 ">
 
 
