--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
   <meta name="apple-mobile-web-app-title" content="frontend">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <meta name="google-signin-client_id" content="994240469555-8iu9le1ibvsbvi765qoqfbj3ks00s62b.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
 
